--- a/index.html
+++ b/index.html
@@ -1,21 +1,76 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Test Page</title>
+	<title>Test CSS</title>
+	<style type="text/css">
+		/* ELEMENT selector */
+		h1 {
+			font-size: 30px;
+			color: teal;
+		}
+		h2{
+			color: red;
+			font-size: 20px;
+		}
+
+		h2 {
+			color: blue; /* in case of style conflicts, bottom rule takes over */
+		}
+
+		/* CLASS selector */
+		.big {
+			font-size: 50px;
+		}
+
+		.uppercase {
+			text-transform: uppercase;
+		}
+
+		.big.uppercase {
+			color: salmon;
+		}
+
+		span {
+			font-style: italic;
+			color: darkred;
+		}
+
+		h1 span {
+			color: purple;
+			text-decoration: underline;
+		}
+	</style>
 </head>
 <body>
 	
-	<h1>Hey. I'm a <em>big</em> heading</h1>
+	<!-- <h1 style="font-size: 30px; color: #36e761">Heading 1 - 1</h1> -->
 
-	<p>Hey. I'm a <strong>paragraph</strong> element. Cool huh</p>
 
-	<a href="https://www.google.com" target="_blank" title="Let's go to google">Click me! I'm a link!</a>
+	
+	<!-- INLINE STYLING : using 'style' attribute -->
 
-	<p>My name is:<br>
-	   Kitty cat
-	</p>
+	<!-- 
+	<h1 style="font-size: 30px; color: salmon">Heading 1 - 1</h1>
+	<h1 style="font-size: 30px; color: salmon">Heading 1 - 2</h1>
+	<h1 style="font-size: 30px; color: salmon">Heading 1 - 3</h1>
+	
+	<h2 style="font-size: 20px; color: hotpink">Heading 2 - 1</h2>
+	<h2 style="font-size: 20px; color: hotpink">Heading 2 - 2</h2>
+	<h2 style="font-size: 20px; color: hotpink">Heading 2 - 3</h2>
+	-->
 
-	<img src="images/cat.jpg">
+
+
+	<!-- EMBEDDED STYLING : in <style> block inside the head element -->
+
+	<span>Span Element</span>
+	<h1 class="uppercase"><span>Heading 1</span> - 1</h1>
+	<h1 class="big">Heading 1 - 2</h1>
+	<h1>Heading 1 - 3</h1>
+	
+	<h2 class="big uppercase">Heading 2 - 1</h2> <!-- multiple classes can be added to the same element-->
+	<h1 class="uppercase">Heading 2 - 2</h2>
+	<h2 class="big">Heading 2 - 3</h2>
 
 </body>
 </html>
