Added external css
Removed the embedded styles and added them to an external stylesheet. Also added a background color for the html document.

--- a/index.html
+++ b/index.html
@@ -2,44 +2,7 @@
 <html>
 <head>
 	<title>Test CSS</title>
-	<style type="text/css">
-		/* ELEMENT selector */
-		h1 {
-			font-size: 30px;
-			color: teal;
-		}
-		h2{
-			color: red;
-			font-size: 20px;
-		}
-
-		h2 {
-			color: blue; /* in case of style conflicts, bottom rule takes over */
-		}
-
-		/* CLASS selector */
-		.big {
-			font-size: 50px;
-		}
-
-		.uppercase {
-			text-transform: uppercase;
-		}
-
-		.big.uppercase {
-			color: salmon;
-		}
-
-		span {
-			font-style: italic;
-			color: darkred;
-		}
-
-		h1 span {
-			color: purple;
-			text-decoration: underline;
-		}
-	</style>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 	
