Started the actual site
Removed all previous practice HTML and CSS codes and added the actual site html with necessary images; including a favicon. Actual site CSS is to be added next.

--- a/index.html
+++ b/index.html
@@ -1,39 +1,50 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Test CSS</title>
+	<title>Wreck-it Ralph</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+
+	<!-- FAVICON -->
+	<link rel="icon" href="images/ralph-avatar.jpg">
 </head>
 <body>
 	
-	<!-- <h1 style="font-size: 30px; color: #36e761">Heading 1 - 1</h1> -->
+	<!-- HEADER element -->
+	<header>
+		<img src="images/ralph-avatar.jpg">
+		<h1>Wreck-it Ralph</h1>
+	</header>
 
+	<!-- MAIN element -->
+	<main>
+		<h2>About Ralph</h2>
+		<p>Ralph is awesome! He's an 8-bit videogame bad guy who travels the length of the arcade to prove that he's a good guy.</p>
+		<img src="images/ralph-big.jpg">
+		<p>Ralph and his friends</p>
 
-	
-	<!-- INLINE STYLING : using 'style' attribute -->
+		<!-- Characteristics -->
+		<h2>Ralph's Characteristics</h2>
+		<ol>
+			<li>He's got big hands</li>
+			<li>He's treated as bad-ass</li>
+			<li>He's trying to be a good guy</li>
+		</ol>
 
-	<!-- 
-	<h1 style="font-size: 30px; color: salmon">Heading 1 - 1</h1>
-	<h1 style="font-size: 30px; color: salmon">Heading 1 - 2</h1>
-	<h1 style="font-size: 30px; color: salmon">Heading 1 - 3</h1>
-	
-	<h2 style="font-size: 20px; color: hotpink">Heading 2 - 1</h2>
-	<h2 style="font-size: 20px; color: hotpink">Heading 2 - 2</h2>
-	<h2 style="font-size: 20px; color: hotpink">Heading 2 - 3</h2>
-	-->
+		<!-- Friends -->
+		<h2>Ralph's Friends</h2>
+		<p>Ralph has some awesome friends. I think his best friend is Glitch. She's awesome. Click on the links to read more about them:</p>
+		<ul>
+			<li><a href="https://en.wikipedia.org/wiki/Pac-Man" target="_blank">Pac-Man</a></li>
+			<li><a href="https://en.wikipedia.org/wiki/Mario" target="_blank">Mario</a></li>
+			<li><a href="https://en.wikipedia.org/wiki/Tarzan" target="_blank">Tarzan</a></li>
+			<li><a href="https://disney.fandom.com/wiki/Vanellope_von_Schweetz" target="_blank">Vanellope von Schweetz A.K.A Glitch</a></li>
+		</ul>
+	</main>
 
-
-
-	<!-- EMBEDDED STYLING : in <style> block inside the head element -->
-
-	<span>Span Element</span>
-	<h1 class="uppercase"><span>Heading 1</span> - 1</h1>
-	<h1 class="big">Heading 1 - 2</h1>
-	<h1>Heading 1 - 3</h1>
-	
-	<h2 class="big uppercase">Heading 2 - 1</h2> <!-- multiple classes can be added to the same element-->
-	<h1 class="uppercase">Heading 2 - 2</h2>
-	<h2 class="big">Heading 2 - 3</h2>
+	<!-- FOOTER element -->
+	<footer>
+		<p>This site was created during an online class about beginning html and css &copy;</p>
+	</footer>
 
 </body>
 </html>
