--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
 
 	<!-- FAVICON -->
 	<link rel="icon" href="images/ralph-avatar.jpg">
+
+	<!-- GOOGLE FONT -->
+	<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+
+	<!-- CSS -->
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 	
@@ -20,7 +26,7 @@
 		<h2>About Ralph</h2>
 		<p>Ralph is awesome! He's an 8-bit videogame bad guy who travels the length of the arcade to prove that he's a good guy.</p>
 		<img src="images/ralph-big.jpg">
-		<p>Ralph and his friends</p>
+		<p class="caption">Ralph and his friends</p>
 
 		<!-- Characteristics -->
 		<h2>Ralph's Characteristics</h2>
@@ -43,7 +49,7 @@
 
 	<!-- FOOTER element -->
 	<footer>
-		<p>This site was created during an online class about beginning html and css &copy;</p>
+		<p>This site was created during an online class about beginning html and css at <a href="https//www.skillshare.com" target="_blank">www.skillshare.com</a> &copy;</p>
 	</footer>
 
 </body>
