Made some simple adjustments to the website
appllied 'lang' attribute to html tag, applied meta charset tag, updated the commenting on the html document, tweaked some css rules, applied commenting to the css file also and updated the favicon and placed in the root folder of the website

--- a/index.html
+++ b/index.html
@@ -1,34 +1,38 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
+	<meta charset="UTF-8">
+
+	<!-- site title -->
 	<title>Wreck-it Ralph</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
 
-	<!-- FAVICON -->
-	<link rel="icon" href="images/ralph-avatar.jpg">
+	<!-- favicon -->
+	<link rel="icon" href="favicon.png">
 
-	<!-- GOOGLE FONT -->
+	<!-- google font -->
 	<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 
-	<!-- CSS -->
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<!-- site css -->
+	<link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-	
-	<!-- HEADER element -->
+
+	<!-- header section -->
 	<header>
 		<img src="images/ralph-avatar.jpg">
 		<h1>Wreck-it Ralph</h1>
 	</header>
 
-	<!-- MAIN element -->
+	<!-- main section -->
 	<main>
 		<h2>About Ralph</h2>
-		<p>Ralph is awesome! He's an 8-bit videogame bad guy who travels the length of the arcade to prove that he's a good guy.</p>
+		<p>Ralph is awesome! He's an 8-bit video game bad guy who travels the length of the arcade to prove that he's a good guy.</p>
 		<img src="images/ralph-big.jpg">
 		<p class="caption">Ralph and his friends</p>
 
-		<!-- Characteristics -->
+		<!-- characteristics -->
 		<h2>Ralph's Characteristics</h2>
 		<ol>
 			<li>He's got big hands</li>
@@ -36,21 +40,22 @@
 			<li>He's trying to be a good guy</li>
 		</ol>
 
-		<!-- Friends -->
+		<!-- Ralph's friends -->
 		<h2>Ralph's Friends</h2>
-		<p>Ralph has some awesome friends. I think his best friend is Glitch. She's awesome. Click on the links to read more about them:</p>
+		<p>Ralph has some awesome friends. I think his best friend is Glitch. She's awesome. Click on the links below to read more about them:</p>
 		<ul>
 			<li><a href="https://en.wikipedia.org/wiki/Pac-Man" target="_blank">Pac-Man</a></li>
 			<li><a href="https://en.wikipedia.org/wiki/Mario" target="_blank">Mario</a></li>
-			<li><a href="https://en.wikipedia.org/wiki/Tarzan" target="_blank">Tarzan</a></li>
+			<li><a href="https://en.wikipedia.org/wiki/Luigi" target="_blank">Luigi</a></li>
 			<li><a href="https://disney.fandom.com/wiki/Vanellope_von_Schweetz" target="_blank">Vanellope von Schweetz A.K.A Glitch</a></li>
 		</ul>
 	</main>
 
-	<!-- FOOTER element -->
+	<!-- footer section -->
 	<footer>
-		<p>This site was created during an online class about beginning html and css at <a href="https//www.skillshare.com" target="_blank">www.skillshare.com</a> &copy;</p>
+		<p>This site was created during an online coding class about fundamentals of html and css at <a href="https//www.skillshare.com" target="_blank">www.skillshare.com</a> &copy;</p>
 	</footer>
 
 </body>
+
 </html>
